# TechWorkshop-L300-AI-Apps-and-agents

./: .gitignore  README.md  azure.yaml  env_sample-arjun.env  github_workflows_azure-deploy.yml  index.md  parameters.json  setup-rbac.ps1  setup-role-assignments.ps1  setup-role-assignments.sh
src/: .env  .gitignore  Dockerfile  chat_app.py  env_sample.txt  flow.md  pyproject.toml  requirements.txt
src/a2a/: main.py
src/a2a/agent/: a2a_server.py  agent_executor.py  product_management_agent.py
src/a2a/api/: chat.py
src/app/agents/: agent_initializer.py  agent_processor.py  cartManagerAgent_initializer.py  customerLoyaltyAgent_initializer.py  handoffAgent_initializer.py  interiorDesignAgent_initializer.py  inventoryAgent_initializer.py  mcp_tools.py  shopperAgent_initializer.py  tool_definitions.py
src/app/servers/: __test_inventory.py  mcp_inventory_client.py  mcp_inventory_server.py
src/app/tools/: aiSearchTools.py  discountLogic.py  imageCreationTool.py  imageUnderstandingTool.py  singleAgentExample.py  understandImage.py
src/handlers/: multi_agent_handler.py  single_agent_handler.py
src/infra/: DeployAzureResources.bicep  DeployAzureResources.json  check_quota.py
src/pipelines/: ingest_to_cosmos.py
src/prompts/: CartManagerPrompt.txt  CustomerLoyaltyAgentPrompt.txt  InteriorDesignAgentPrompt.txt  ShopperAgentPrompt.txt  agent_map.json
src/services/: agent_service.py  fallback_service.py  handoff_service.py
src/utils/: env_utils.py  history_utils.py  storage_utils.py
src/workflows/: 0501_deployment.yml  0502_sample_agent_deployment.yml
(+40 files in other folders)
