[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[sqlite]==0.3.12",
    "azure-ai-agents==1.2.0b6",
    "azure-ai-evaluation[redteam]==1.13.7",
    "azure-ai-inference==1.0.0b9",
    "azure-ai-projects==1.1.0b4",
    "azure-core-tracing-opentelemetry==1.0.0b12",
    "azure-cosmos==4.14.2",
    "azure-identity==1.25.1",
    "azure-monitor-opentelemetry==1.8.2",
    "azure-search-documents==11.6.0",
    "fastapi==0.121.3",
    "fastmcp==2.13.1",
    "httpx==0.28.1",
    "mcp==1.21.2",
    "numpy==2.2.6",
    "openai==2.8.0",
    "opentelemetry-instrumentation-openai-v2==2.1b0",
    "opentelemetry-sdk==1.38.0",
    "orjson==3.11.4",
    "pandas==2.3.3",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "semantic-kernel==1.37.0",
    "sse-starlette==3.0.3",
    "starlette==0.50.0",
    "uvicorn[standard]==0.38.0",
]
